website/websites/u32q/code/meteor.4.scala.log

Wed, 19 Mar 2014 07:26:25 GMT

MAKE:
mv meteor.scala-4.scala meteor.scala
/usr/local/src/scala-2.10.3/bin/scalac -optimise -target:jvm-1.7 meteor.scala
meteor.scala:157: error: value findIndexOf is not a member of Array[BoardCell]
   def firstEmptyCellIndex() = cells.findIndexOf(c => c.isEmpty)
                                     ^
one error found
make: [meteor.scala-4.scala_run] Error 1 (ignored)
2.96s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.8.0/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts  -Xbootclasspath/a:/usr/local/src/scala-2.10.3/lib/scala-library.jar:/usr/local/src/scala-2.10.3/lib/akka-actors.jar:/usr/local/src/scala-2.10.3/lib/typesafe-config.jar meteor 2098

PROGRAM FAILED 


PROGRAM OUTPUT:

Error: Could not find or load main class meteor
